--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
@@ -52,13 +52,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Titular</h4>
+                            <h4 class="page-title">Agregar Titulo</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Titular</li>
+                            <li class="breadcrumb-item active">Agregar Titulo</li>
                         </ul>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
 
             <div class="col-12">
                 <div class="card">
-                    @using (Html.BeginForm("InsertarTitular", "titulares",
+                    @using (Html.BeginForm("InsertarTitulo", "titulares",
                         FormMethod.Post, new
                         {
                             id = "newresidentForm",
@@ -100,47 +100,9 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Información del Titular</h5>
-
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <div id="img-fluid" class="col-sm-3">
-                                </div>
-
-                                <div class="col-sm-9">
-                                    <div class="input-group mt-2">
-                                        <div class="custom-file">
-                                            <input type="file" class="custom-file-input" id="inputGroupFile04"
-                                                   data-toggle="tooltip" title="Subir logo en formato jpg o png" name="user_logo" />
-                                            <label class="custom-file-label" for="inputGroupFile04">Selecciona Tu Imagen</label>
-                                        </div>
-                                        <div class="col-sm-3">
-                                            <small class="form-text text-muted">Subir logo en formato jpg o png</small>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Correo electrónico</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="email" value="" name="email" required
-                                           data-toggle="tooltip" title="Base utilizada para identificar las unidades suscritas de varias comunidades adscritas."
-                                           placeholder="Correo electrónico del titular" id="example-email-input">
-                                    <small class="form-text text-muted">Base utilizada para identificar las unidades suscritas de varias comunidades adscritas.</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-password-input" class="col-sm-3 col-form-label">Contraseña</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="password" value="" name="password"
-                                           data-toggle="tooltip" title="Contraseña utilizada para ingresar al sistema"
-                                           placeholder="Contraseña" id="example-password-input">
-                                    <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
-                                </div>
-                            </div>
+                            <h5 class="d-inline-block">Información del Titulo</h5>
+                            <input type="hidden" value="@Model.IdUserTitular" name="IdUser" />
+                          
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label label="example-date-input" class="col-sm-3 col-form-label">Fecha de adquisición</label>
@@ -155,8 +117,8 @@
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Comunidad</label>
                                 <div class="col-sm-9">
-                                    <select class="form-control" multiple name="communityID"
-                                            data-toggle="tooltip" title="Nombre de la Comunidad" id="communityID">
+                                    <select class="form-control" name="IdCommunity"
+                                            data-toggle="tooltip" title="Nombre de la Comunidad" id="IdCommunity">
                                         @foreach (var item in Model.communityList)
                                         {
                                             <option value="@item.id">@item.first_name</option>
@@ -169,67 +131,7 @@
 
 
 
-                            <div class="form-divider"></div>
-                            <h6 class="mt-0 header-title">Nombre completo del Titular</h6>
-                            <p>Nombre del titular según aparece en la escritura de compraventa.</p>
-                            <div class="form-group row">
-                                <label for="example-name22-input" class="col-sm-3 col-form-label">Nombre</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="first_name1"
-                                           data-toggle="tooltip" title="Nombre del Titular"
-                                           placeholder="Nombre" id="example-name22-input" />
-                                    <small class="form-text text-muted">Nombre del Titular</small>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="example-lastname2-input" class="col-sm-3 col-form-label">Apellido paterno</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="last_name1"
-                                           data-toggle="tooltip" title="Apellido paterno del Titular"
-                                           placeholder="Apellido paterno" id="example-lastname22-input">
-                                    <small class="form-text text-muted">Apellido paterno del Titular</small>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="example-lastname22m-input" class="col-sm-3 col-form-label">Apellido materno</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="mother_last_name1"
-                                           data-toggle="tooltip" title="Apellido materno del Titular"
-                                           placeholder="Apellido materno" id="example-lastname22m-input">
-                                    <small class="form-text text-muted">Apellido materno del Titular</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de Teléfono</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="tel" value="" name="phone_number1"
-                                           data-toggle="tooltip" title="Número de teléfono del Titular"
-                                           placeholder="# Teléfono" id="example-tel1-input">
-                                    <small class="form-text text-muted">Número de teléfono del Titular</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-address11-input" class="col-sm-3 col-form-label">Dirección Postal</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="postal_address"
-                                           data-toggle="tooltip" title="Dirección postal del Titular"
-                                           placeholder="Dirección Postal" id="example-address11-input">
-                                    <small class="form-text text-muted">Dirección postal del Titular</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-address2-inputt" class="col-sm-3 col-form-label">Dirección Residencial</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="residential_address"
-                                           data-toggle="tooltip" title="Dirección residencial del Titular"
-                                           placeholder="Dirección Residencial" id="example-address2-inputt">
-                                    <small class="form-text text-muted">Dirección residencial del Titular-G1</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
+                            <div class="form-divider"></div>                          
                             <div class="form-group row">
                                 <label for="apartment-input" class="col-sm-3 col-form-label">Apartamento</label>
                                 <div class="col-sm-9">
