--- a/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
@@ -126,6 +126,10 @@
                                                         <i class="mdi mdi-lead-pencil"></i>
                                                     </button>
                                                 </a>
+                                                <a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = item.id })" 
+                                                   class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Titulos">
+                                                   <i class="mdi mdi-home"></i></a>
                                                 <a href="#">
                                                     <button type="button" onclick="onDeleteTitulares(this)" data-id="@item.id"
                                                             class="btn btn-danger waves-effect waves-light btn-sm mb-1"
@@ -135,8 +139,8 @@
                                                         <i class="mdi mdi-delete"></i>
                                                     </button>
                                                 </a>
-                                                
-                                               
+
+
                                             </td>
                                            
                                         </tr>
